--- a/index.html
+++ b/index.html
@@ -26,36 +26,35 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Irene</span>
+                Hii
+                <span id="name">Khushi Didi</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">It's Nice to Wish you From Kunal</p>
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>It's your birthday! Today</p>
         </div>
 
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
-                </p>
+                Happy birthday to youu!! 🎂🎂 May God bless you, be happy enjoy your life and i wish you will get for whatever your working hard...             </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">i was thinking to casually wish you</p>
+            <p class="idea-2">But then I stopped</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
+                I realised i can make it more complicated<br>
                 <strong>special</strong>
                 .
             </p>
             <p class="idea-4">Because,</p>
             <p class="idea-5">
-                You are Special
+                i know programming well
                 <span>:)</span>
             </p>
             <p class="idea-6">
@@ -65,11 +64,11 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/ireaane.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">God Does not bless btw you will have to work and fight for a life you want</h5>
             </div>
         </div>
 
@@ -142,8 +141,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>Okay,,,, Once Again happy Birthday,,, work hard your masi also work very hard for all of you,,make them proud.. </p>
+            <p id="replay">and dont try to think how i create this you just canttttt..click this if you want to play again hahaha..</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
