--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/kkk.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hii
-                <span id="name">Khushi Didi</span>
+                <span id="name">Khushi Didi (parlour Wali)</span>
             </h1>
             <p class="two" id="greetingText">It's Nice to Wish you From Kunal</p>
         </div>
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! 🎂🎂 May God bless you, be happy enjoy your life and i wish you will get for whatever your working hard...             </p>
+                Happy birthday to youu!! Parlour Wali Didi 🎂🎂 May God bless you, be happy enjoy your life and i wish you will get for whatever your working hard...             </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
@@ -67,7 +67,7 @@
             <img src="./img/ireaane.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
+                <h3 class="wish-hbd">Happy Birthday! Parlour Wali didi</h3>
                 <h5 id="wishText">God Does not bless btw you will have to work and fight for a life you want</h5>
             </div>
         </div>
